--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <h2 id="h2">About Me</h2>
         <p>
           Hi! My name is Alwi, i am a beginner web developer. im currently studying at UPN Veteran Jawa Timur majoring in Information System. i can also do design like poster design, homepage design using Adobe Photoshop and Adobe
-          Illustration. Don't hesitate to contact me if you need me to build you a website or do a stunning design for your needs, looking forward to it!
+          Illustrator. Don't hesitate to contact me if you need me to build you a website or do a stunning design for your needs, looking forward to it!
         </p>
       </div>
       <div class="poto">
